# giga_agent_lite

./: .gitignore  AGENTS.md  PLAN.md  README.md  cors-proxy-worker.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml  release.yml  tauri-build.yml
assets/: index-BmbIV5ZT.js.map
docs/: index.html
docs/assets/: anthropic-BGvT4gad.js  anthropic-BGvT4gad.js.map  anthropic-C3AMbHht.js  anthropic-C3AMbHht.js.map  anthropic-C7tovQie.js  anthropic-C7tovQie.js.map  anthropic-CRDIpcni.js  anthropic-CRDIpcni.js.map  anthropic-Ck3XafIu.js  anthropic-Ck3XafIu.js.map  anthropic-DABQzPEp.js  anthropic-DABQzPEp.js.map  anthropic-DauAa5vs.js  anthropic-DauAa5vs.js.map  anthropic-Kr4VY9L3.js  anthropic-Kr4VY9L3.js.map  base-C-54SJ3k.js  base-C-54SJ3k.js.map  base-CJpY5UYp.js  base-CJpY5UYp.js.map  base-CfcGzX58.js  base-CfcGzX58.js.map  base-Cs1QOlfs.js  base-Cs1QOlfs.js.map  base-D569038p.js  base-D569038p.js.map  base-Da811pzq.js  base-Da811pzq.js.map  base-Dsp792E8.js  base-Dsp792E8.js.map  base-vnN3PLvk.js  base-vnN3PLvk.js.map  gemini-5d7MmVb6.js  gemini-5d7MmVb6.js.map  gemini-BJu44b3b.js  gemini-BJu44b3b.js.map  gemini-BiUeEDun.js  gemini-BiUeEDun.js.map  gemini-BlseqZav.js  gemini-BlseqZav.js.map  (+71 more)
patches/: gigachat+0.0.15.patch
src/: agent.ts  main.ts  storage.ts  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: create-document.test.ts  definitions.test.ts  memory.test.ts  read-files.test.ts  test-cases.md
worker/: ddg-proxy.js  wrangler.toml
(+17 files in other folders)
